--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/add/_keyin.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/add/_keyin.html.twig
@@ -23,7 +23,7 @@
 
 		  <my-form-input model="goods" label="'原廠型號'" name="'org_sn'"></my-form-input>
 
-		  <my-form-input model="goods" label="'品牌型號'" name="'brandSn'"></my-form-input>
+		  <!-- <my-form-input model="goods" label="'品牌型號'" name="'brandSn'"></my-form-input> -->
 
 		  <my-form-number model="goods" label="'一般價'" name="'fake_price'" isPrice="1" isRequired="1"></my-form-number>
 
