--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/form/_goods.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/form/_goods.html.twig
@@ -17,7 +17,7 @@
 
 <my-form-input model="goods" label="'原廠型號'" name="'org_sn'"></my-form-input>
 
-<my-form-input model="goods" label="'品牌型號'" name="'brand_sn'"></my-form-input>
+<!-- <my-form-input model="goods" label="'品牌型號'" name="'brand_sn'"></my-form-input> -->
 
 <my-form-date model="goods" label="'進貨時間'" name="'purchase_at'"></my-form-date>
 
@@ -53,7 +53,7 @@
 
 <my-form-select model="goods" entitys="entity.patterns" name="'pattern'" label="'款式'"></my-form-select>
 
-<my-form-select model="goods" entitys="entity.goodsSources" name="'source'" label="'來源'"></my-form-select>
+<!-- <my-form-select model="goods" entitys="entity.goodsSources" name="'source'" label="'來源'"></my-form-select> -->
 
 <my-form-select model="goods" entitys="entity.goodsLevels" name="'level'" label="'商品狀況'"></my-form-select>
 
