--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/search/_condition.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/search/_condition.html.twig
@@ -190,7 +190,7 @@
 	    </div>
 	  </div>
 
-	  <div class="form-group">
+	  <!-- <div class="form-group">
 	    <label class="col-sm-2 control-label">型號</label>
 	    <div class="col-sm-10">
 	    	<div class="input-group">
@@ -210,7 +210,7 @@
 	        </div>
       	</div>
 	    </div>
-	  </div>
+	  </div> -->
 
 	  <div class="form-group">
 	    <label class="col-sm-2 control-label">備註</label>
@@ -420,7 +420,7 @@
 	    </div>
 	  </div>
 
-	  <div class="form-group">
+	  <!-- <div class="form-group">
 	    <label class="col-sm-2 control-label">來源</label>
 	    <div class="col-sm-10">
 
@@ -439,7 +439,7 @@
           </div>
 	    	</div>
 	    </div>
-	  </div>
+	  </div> -->
 
 	  <div class="form-group">
 	    <label class="col-sm-2 control-label">商品狀況</label>
@@ -576,9 +576,9 @@
 
 			<div class="col-sm-5">
 				<div class="btn-group">
-	        <label class="btn btn-default" ng-model="orderDir" btn-radio="'ASC'" uncheckable>A>Z</label>
-	        <label class="btn btn-default" ng-model="orderDir" btn-radio="'DESC'" uncheckable>Z>A</label>
-	    	</div>
+    	           <label class="btn btn-default" ng-model="orderDir" btn-radio="'ASC'" uncheckable>A>Z</label>
+    	           <label class="btn btn-default" ng-model="orderDir" btn-radio="'DESC'" uncheckable>Z>A</label>
+    	    	</div>
 			</div>
 		</div>
   </form>
