--- a/app/Resources/views/reebonz/partials/header.html.twig
+++ b/app/Resources/views/reebonz/partials/header.html.twig
@@ -75,6 +75,10 @@
         <li>
           <li><a href="#/activity" my-title-symlink-a>活動</a></li>
         </li>
+
+        <li>
+          <li><a href="#/exchangeRate" my-title-symlink-a>匯率</a></li>
+        </li>
       </ul>
 
       <ul class="nav navbar-nav navbar-right">
