--- a/src/Woojin/OrderBundle/Resources/views/Order/partials/special/res.html.twig
+++ b/src/Woojin/OrderBundle/Resources/views/Order/partials/special/res.html.twig
@@ -65,7 +65,12 @@
 	<hr />
 </div>
 
-<div class="panel panel-success" ng-repeat="invoice in invoices" ng-if="invoice.id;">
+<div class="row">
+	<input ng-model="query.store.name" type="text" name="filter" class="form-control input-sm" placeholder="店碼" />
+</div>
+
+
+<div class="panel panel-success" ng-repeat="invoice in invoices | filter:query" ng-if="invoice.id;">
 	<div class="panel-heading">
 		<b>[{{invoice.store.name}}]</b>
 		<i>{{ invoice.sn }}</i>
@@ -129,7 +134,7 @@
 							<div class="col-sm-10">
 								<button ng-show="orders.status.id != 1;" confirmed-click="_cancel(orders);" ng-confirm-click="確定取消此訂單嘛?" class="btn btn-danger"><span class="glyphicon glyphicon-remove-circle"></span>取消訂單</button>
 
-								<button ng-show="orders.status.id == 1;" ng-click="update(orders);" class="btn btn-success">
+								<button ng-click="update(orders);" class="btn btn-success">
 									<span class="glyphicon glyphicon-ok-circle"></span>更新帳單
 								</button>
 							</div>	
