--- a/src/Woojin/OrderBundle/Resources/views/Order/partials/special/res.html.twig
+++ b/src/Woojin/OrderBundle/Resources/views/Order/partials/special/res.html.twig
@@ -1,11 +1,35 @@
 {% verbatim %}
 
+<!--// Special Catrl Part -->
 <div class="row" ng-show="isOrderSpecial">
 	<form role="form">
-		<select class="form-control" ng-change="getActivityReocrdWithDate(true);" ng-model="dateSelected" ng-options="eachdate.val for eachdate in dateRepo"></select>
+		<div class="form-group">	
+			<div class="col-xs-12 col-sm-4">
+				<select class="form-control" ng-model="dateStart" ng-options="eachdate.val for eachdate in dateRepo"></select>
+			</div>
+
+			<div class="col-xs-12 col-sm-4">
+				<select class="form-control" ng-model="dateEnd" ng-options="eachdate.val for eachdate in dateRepo"></select>
+			</div>
+
+			<div class="col-xs-12 col-sm-4">
+				<button class="btn btn-primary btn-sm" ng-click="getActivityReocrdWithDate();">查詢</button>
+			</div>
+	
+			<!-- Daphy 要求改成區間選取 -->
+			<!-- <div class="col-xs-12 col-sm-12">
+				<div class="well well-sm">單日查詢</div>
+			</div> -->
+
+			<!-- <div class="col-xs-12 col-sm-12">
+				<select class="form-control" ng-change="getActivityReocrdWithDate(true);" ng-model="dateSelected" ng-options="eachdate.val for eachdate in dateRepo"></select>
+			</div> -->
+		</div>
 	</form>
 </div>
+<!-- Special Catrl Part //-->
 
+<!--// Normal Ctrl Part -->
 <div class="row" ng-show="isOrderNormal">
 	<form role="form">
 		<div class="form-group">
@@ -23,7 +47,9 @@
 		</div>
 	</form>
 </div>
+<!-- Normal Ctrl Part //-->
 
+<!--// Common Part -->
 <div class="row">&nbsp;</div>
 
 <div class="row" ng-show="invoices;">
@@ -57,7 +83,7 @@
 
 			<!-- 活動 -->
 			<td class="text-right" ng-show="isOrderSpecial">
-				<button ng-click="export(true);" class="btn btn-info btn-sm">單日匯出</button>
+				<button ng-show="isSingleDay" ng-click="export(true);" class="btn btn-info btn-sm">區間匯出</button>
 				<button ng-click="export();" class="btn btn-success btn-sm">全部匯出</button>
 			</td>
 		</tr>
@@ -66,9 +92,10 @@
 </div>
 
 <div class="row">
-	<input ng-model="query.store.name" type="text" name="filter" class="form-control input-sm" placeholder="店碼" />
+	<input ng-model="query.sn" type="text" name="filter" class="form-control input-sm" placeholder="店碼" />
 </div>
 
+<br>
 
 <div class="panel panel-success" ng-repeat="invoice in invoices | filter:query" ng-if="invoice.id;">
 	<div class="panel-heading">
@@ -154,4 +181,5 @@
 		</div>
 	</div>
 </div>
+<!-- Common Part //-->
 {% endverbatim %}
