--- a/src/Woojin/OrderBundle/Resources/views/Order/index.html.twig
+++ b/src/Woojin/OrderBundle/Resources/views/Order/index.html.twig
@@ -395,8 +395,12 @@
 
 							<div class="col-sm-10">
 								<button ng-show="orders.status.id != 3;" confirmed-click="cancel($index);" ng-confirm-click="確定取消此訂單嘛?" class="btn btn-danger">
-									<span class="glyphicon glyphicon-remove-circle"></span>取消訂單</button>
+								<span class="glyphicon glyphicon-remove-circle"></span>取消訂單
+								</button>
+								
 								<button ng-show="orders.status.id == 1;" ng-click="update($index);" class="btn btn-success"><span class="glyphicon glyphicon-ok-circle"></span>確認補款</button>
+
+								<button ng-show="orders.status.id == 3 && orders.kind.type == 2;" confirmed-click="reverseCancel($index);" ng-confirm-click="確定還原此訂單嘛?" class="btn btn-default"><span class="glyphicon glyphicon-backward"></span>還原訂單</button>
 							</div>	
 						</div>
 					</form>
