--- a/src/Woojin/OrderBundle/Resources/views/Order/partials/special/res.html.twig
+++ b/src/Woojin/OrderBundle/Resources/views/Order/partials/special/res.html.twig
@@ -83,7 +83,7 @@
 
 			<!-- 活動 -->
 			<td class="text-right" ng-show="isOrderSpecial">
-				<button ng-show="isSingleDay" ng-click="export(true);" class="btn btn-info btn-sm">區間匯出</button>
+				<button ng-click="export(true);" class="btn btn-info btn-sm">區間匯出</button>
 				<button ng-click="export();" class="btn btn-success btn-sm">全部匯出</button>
 			</td>
 		</tr>
@@ -101,9 +101,9 @@
 	<div class="panel-heading">
 		<b>[{{invoice.store.name}}]</b>
 		<i>{{ invoice.sn }}</i>
-		<strong ng-show="invoice.custom">{{ invoice.custom.name }}{{ invoice.custom.sex }}</strong>
-		<small>-{{ formatDate(invoice.create_at, 'yyyy-MM-d H:mm:ss') }}</small>
-		<span class="pull-right">{{invoice.user.username }}&nbsp;&nbsp;&nbsp;&nbsp;</span>
+		<strong ng-show="invoice.custom" class="hidden-xs">{{ invoice.custom.name }}{{ invoice.custom.sex }}</strong>
+		<small class="hidden-xs">-{{ formatDate(invoice.create_at, 'yyyy-MM-d H:mm:ss') }}</small>
+		<span class="pull-right hidden-xs">{{invoice.user.username }}&nbsp;&nbsp;&nbsp;&nbsp;</span>
 		<b class="pull-right">總金額{{ invoice.total }}元&nbsp;&nbsp;&nbsp;&nbsp;</b>
 	</div>
 
@@ -115,23 +115,24 @@
 			>
 				<span class="caret"></span>
 					<span>{{ orders.kind.name }} 
-						<small><mark>{{ orders.status.name }}</mark></small>
+						<small ng-show="orders.childrens.length == 0"><mark>{{ orders.status.name }}</mark></small>
+						<small ng-show="orders.childrens.length > 0"><mark>已退貨</mark></small>
 						&nbsp;&nbsp;
 					</span>
 
-					<span ng-show="orders.goods_passport.activity" class="label label-warning">{{ orders.goods_passport.activity.name }}</span>
+					<span ng-show="orders.goods_passport.activity" class="label label-warning hidden-xs">{{ orders.goods_passport.activity.name }}</span>
 					
 					<b>{{ orders.goods_passport.name }}&nbsp;&nbsp;</b>
 
-					<span ng-show="orders.goods_passport.brand" class="label label-default">{{ orders.goods_passport.brand.name }}</span>&nbsp;&nbsp;
+					<span ng-show="orders.goods_passport.brand" class="label label-default hidden-xs">{{ orders.goods_passport.brand.name }}</span>&nbsp;&nbsp;
 					
 					<i>{{ orders.goods_passport.sn }}&nbsp;&nbsp;</i>
 					
-					<span>{{ orders.custom.name }}</span>
+					<span class="hidden-xs">{{ orders.custom.name }}</span>
 					
-					<span class="pull-right small-font" bind-once>|&nbsp;應付:&nbsp;{{ orders.required }}元&nbsp;&nbsp;</span>
+					<span class="pull-right small-font hidden-xs" bind-once>|&nbsp;應付:&nbsp;{{ orders.required }}元&nbsp;&nbsp;</span>
 					
-					<span class="pull-right small-font" bind-once>|&nbsp;已付:&nbsp;{{ orders.paid }}元&nbsp;&nbsp;</span>
+					<span class="pull-right small-font hidden-xs" bind-once>|&nbsp;已付:&nbsp;{{ orders.paid }}元&nbsp;&nbsp;</span>
 					
 					<span class="pull-right small-font" bind-once ng-show="orders.goods_passport.discount && orders.goods_passport.discount != 10;">[{{ orders.goods_passport.discount }}折]&nbsp;&nbsp;</span>
 			</h4><hr/>
@@ -159,7 +160,9 @@
 							<label class="col-sm-2 control-label">&nbsp;</label>
 
 							<div class="col-sm-10">
-								<button ng-show="orders.status.id != 1;" confirmed-click="_cancel(orders);" ng-confirm-click="確定取消此訂單嘛?" class="btn btn-danger"><span class="glyphicon glyphicon-remove-circle"></span>取消訂單</button>
+								<button ng-show="orders.status.id != 3;" confirmed-click="_cancel(orders);" ng-confirm-click="確定取消此訂單嘛?" class="btn btn-danger"><span class="glyphicon glyphicon-remove-circle"></span>取消訂單</button>
+
+								<button ng-show="orders.status.id != 3 && orders.childrens.length == 0" confirmed-click="turnback(orders);" ng-confirm-click="確定退貨嘛?" class="btn btn-warning"><span class="glyphicon glyphicon-backward"></span>退貨</button>
 
 								<button ng-click="update(orders);" class="btn btn-success">
 									<span class="glyphicon glyphicon-ok-circle"></span>更新帳單
