fix change password bug

--- a/src/Woojin/UserBundle/Resources/views/User/editPassword.html.twig
+++ b/src/Woojin/UserBundle/Resources/views/User/editPassword.html.twig
@@ -8,17 +8,17 @@
     <form action="{{ path('password_edit', {id: user.id, csrf: user.csrf}) }}" role="form" method="post" >
         <div class="form-group">
             <label for="username">請輸入密碼</label>
-            <input type="password" id="password" class="form-control" name="password" placeholder="請輸入帳號" />
+            <input type="password" id="password" class="form-control" ng-model="password" name="password" placeholder="請輸入帳號" />
         </div>
         <div class="form-group">
             <label for="password">確認密碼</label>
-            <input type="password" id="confirm-password" name="confirm-password" class="form-control" placeholder="確認密碼" />
+            <input type="password" id="confirm-password" ng-model="confirmPassword" name="confirm-password" class="form-control" placeholder="確認密碼" />
 
             <input type="hidden" name="csrf" value="{{ user.csrf }}">
         </div>
 
         <div class="form-group">
-            <button class="btn btn-primary pull-right">確認</button>
+            <button class="btn btn-primary pull-right" ng-click="update();">確認</button>
         </div>
     </form>
 </div>
