聖誕節隔天commit, 訂單順序修正，銷售匯率新增, 活動名稱可以有斜線

--- a/app/Resources/views/reebonz/partials/header.html.twig
+++ b/app/Resources/views/reebonz/partials/header.html.twig
@@ -77,8 +77,13 @@
           <li><a href="#/activity" my-title-symlink-a>活動</a></li>
         </li>
 
-        <li>
-          <li><a href="#/exchangeRate" my-title-symlink-a>匯率</a></li>
+        <li class="dropdown">
+          <a class="dropdown-toggle" data-toggle="dropdown">匯率 <b class="caret"></b></a>
+    
+          <ul class="dropdown-menu">
+            <li><a href="#/benefitExchangeRate" my-title-symlink-a>銷售匯率</a></li>
+            <li><a href="#/exchangeRate" my-title-symlink-a>成本匯率</a></li>
+          </ul>
         </li>
       </ul>
 
