訂單綁定活動

--- a/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/modal/orders.html.twig
+++ b/src/Woojin/GoodsBundle/Resources/views/GoodsPassport/partials/modal/orders.html.twig
@@ -10,10 +10,10 @@
       <div class="panel-heading">
         <h3 class="panel-title"> 
           <small>{{ orders.status.name }}</small>
-          <span>{{ orders.kind.name }}</span>
+          <span>{{ orders.kind.name }} &nbsp;&nbsp;<em>{{ orders.activity.name }}</em> </span>
           <strong ng-show="orders.custom" class="pull-right">客戶: {{ orders.custom.name }}{{ orders.custom.sex }}</strong>
-          <span class="pull-right">應付: &nbsp;&nbsp;{{ orders.required }}元&nbsp;&nbsp;&nbsp;&nbsp;</span>
-          <span class="pull-right">已付: &nbsp;&nbsp;{{ orders.paid }}元&nbsp;&nbsp;&nbsp;&nbsp;</span>
+          <span class="pull-right" style="font-size:12px;">應付: &nbsp;&nbsp;{{ orders.required }}元&nbsp;&nbsp;&nbsp;&nbsp;</span>
+          <span class="pull-right" style="font-size:12px;">已付: &nbsp;&nbsp;{{ orders.paid }}元&nbsp;&nbsp;&nbsp;&nbsp;</span>
         </h3>
       </div>
       <div class="panel-body">
